--- a/IndexF.html
+++ b/IndexF.html
@@ -74,17 +74,73 @@
     <section id="languages">
         <div class="container">
         <div class="row">
-        <h1 class="section__title"> This is my technology stack </h1>
+        <h1 class="section__title"> This is my<span class="text--purple"> technology stack</span> </h1>
         <div class="language__list">
             <div class="language">
                 <figure class="language-img--wrapper">
-                    <img src="" alt="" class="language__img">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
                 </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
+            </div>
+            <div class="language">
+                <figure class="language-img--wrapper">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                </figure>
+                <span class="language__name"> HTML</span>
             </div>
         </div>
         </div>
     </div>
-
-    </section>
+  </section>
+  <section id="projects">
+      <div class ="container">
+          <div class="row">
+              <h1 class="section__title">Here are some of my <span class="text--purple"> projects</span></h1>
+              <ul class="project__list">
+               <li class="project">
+                <div class="project__wrapper">
+                    <img src="./Images/loopit.png" class="project__img">
+                </div>
+               </li>   
+              </ul>
+          </div>
+      </div>
+  </section>
 </body>
 </html>
