--- a/IndexF.html
+++ b/IndexF.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,139 +9,242 @@
     <link rel="stylesheet" href="StyleF.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="about-me">
-      <nav>
-          <div class="personal__logo"> Abdullahi Ahmed </div>
-          <ul class="nav__link--list">
-              <li>
-                 <a href="" class="
+        <nav>
+            <div class="personal__logo"> Abdullahi Ahmed </div>
+            <ul class="nav__link--list">
+                <li>
+                    <a href="" class="
                  nav__link--anchor
                  link__hove-effect
-                 link__hove-effect--block"
-                 > Languages</a>                 
-            </li>
-            <li>
-                <a href="" class="
+                 link__hove-effect--block"> Languages</a>
+                </li>
+                <li>
+                    <a href="" class="
                 nav__link--anchor
                 link__hove-effect
-                link__hove-effect--block"
-                > Projects</a>                 
-           </li>
-           <li>
-            <a href="" class="
+                link__hove-effect--block"> Projects</a>
+                </li>
+                <li>
+                    <a href="" class="
             nav__link--anchor
-            nav__link--anchor-primary"
-             > Contact </a>                 
-       </li>
-          </ul>
-      </nav>
-      <div class="flex flex-1">
-      <div class="about-me-info row">
-          <div class="about-me-info--container">
-           <figure class="about-me__picture--mask">
-               <img src="Images/me-2.jpg" class="about-me__picture" alt="">
-           </figure>   
-             <h1 class="about-me__info--title">
-                 hey! i'm <span class="text--purple">Abdullahi Ahmed Seed 👋</span>
-                 <span class="wave">👋 </span>
-             </h1>
-             <p class="about-me__info--para">
-                 i'm a <strong class="text--purple"> frontend software engineer </strong> with a strong passion for building responsive 
-                 and performat web applications with great user experiences that positively impacts the world.
+            nav__link--anchor-primary"> Contact </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="flex flex-1">
+            <div class="about-me-info row">
+                <div class="about-me-info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="Images/me-2.jpg" class="about-me__picture" alt="">
+                    </figure>
+                    <h1 class="about-me__info--title">
+                        hey! i'm <span class="text--purple">Abdullahi Ahmed Seed 👋</span>
+                        <span class="wave">👋 </span>
+                    </h1>
+                    <p class="about-me__info--para">
+                        i'm a <strong class="text--purple"> frontend software engineer </strong> with a strong passion
+                        for building responsive
+                        and performat web applications with great user experiences that positively impacts the world.
 
-             </p>
-             <div class="about-me__links">
-             <a href="" class="about-me__link">
-                <i class="fab fa-linkedin-in"></i>            
-            </a>
-            <a href="" class="about-me__link">
-                <i class="fab fa-github"></i>            
-            </a>
-            <a href="" class="about-me__link">
-                <i class="far fa-envelope"></i>            
-            </a>
-            <a href="" class="about-me__link">
-                <i class="fas fa-file-pdf "></i>            
-            </a> 
-             </div>
-             </div>
-             <figure class="about-me__img--container">
-                 <img src="images/undraw_websites.svg" class = "about-me__img"alt="">
-             </figure>
-          </div>
-      </div>  
+                    </p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="far fa-envelope"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fas fa-file-pdf "></i>
+                        </a>
+                    </div>
+                </div>
+                <figure class="about-me__img--container">
+                    <img src="images/undraw_websites.svg" class="about-me__img" alt="">
+                </figure>
+            </div>
+        </div>
     </section>
     <section id="languages">
         <div class="container">
-        <div class="row">
-        <h1 class="section__title"> This is my<span class="text--purple"> technology stack</span> </h1>
-        <div class="language__list">
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-            <div class="language">
-                <figure class="language-img--wrapper">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                </figure>
-                <span class="language__name"> HTML</span>
-            </div>
-        </div>
-        </div>
-    </div>
-  </section>
-  <section id="projects">
-      <div class ="container">
-          <div class="row">
-              <h1 class="section__title">Here are some of my <span class="text--purple"> projects</span></h1>
-              <ul class="project__list">
-               <li class="project">
-                <div class="project__wrapper">
-                    <img src="./Images/loopit.png" class="project__img">
+            <div class="row">
+                <h1 class="section__title"> This is my<span class="text--purple"> technology stack</span> </h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language-img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                        <span class="language__name"> HTML</span>
+                    </div>
                 </div>
-               </li>   
-              </ul>
-          </div>
-      </div>
-  </section>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my <span class="text--purple"> projects</span></h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./Images/loopit.png" class="project__img" alt="Car subscription project">
+                            <div class="project__description">
+                                <h3 class="project__description--title"> car sales </h3>
+                                <h4 class="project__description--sub-title"> Html, CSS, JavaScript, Vue, Vuex </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo,
+                                    scelerique sed odio get, luctus faucibus augue. Fusce volupat laculis dapibus. Lorem
+                                    ipsum dolor sit amet,
+                                    adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
+                                </p>
+                                <div class="project__description--link">
+                                    <a href="https://www.github.com/yourlink" class="project__description__link" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://www.yourwebsite.com" class="project__description__link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./Images/loopit.png" class="project__img" alt="Car subscription project">
+                            <div class="project__description">
+                                <h3 class="project__description--title"> car sales </h3>
+                                <h4 class="project__description--sub-title"> Html, CSS, JavaScript, Vue, Vuex </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo,
+                                    scelerique sed odio get, luctus faucibus augue. Fusce volupat laculis dapibus. Lorem
+                                    ipsum dolor sit amet,
+                                    adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
+                                </p>
+                                <div class="project__description--link">
+                                    <a href="https://www.github.com/yourlink" class="project__description__link" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://www.yourwebsite.com" class="project__description__link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./Images/loopit.png" class="project__img" alt="Car subscription project">
+                            <div class="project__description">
+                                <h3 class="project__description--title"> Dashboard </h3>
+                                <h4 class="project__description--sub-title"> Html, CSS, JavaScript, Vue, Vuex </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo,
+                                    scelerique sed odio get, luctus faucibus augue. Fusce volupat laculis dapibus. Lorem
+                                    ipsum dolor sit amet,
+                                    adipiscing elit. Maecenas id eleifend libero. In hac habitasse platea dictumst.
+                                </p>
+                                <div class="project__description--link">
+                                    <a href="https://www.github.com/yourlink" class="project__description__link" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://www.yourwebsite.com" class="project__description__link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row footer__row">
+            <a href="#">
+                <figure>
+                    <img src="/Images/logo.svg" class="footer-logo--img" alt="">
+                </figure>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white"> github</a>
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white"> linkedin</a>
+                <a href="mailto:email@mail.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white"> Email</a>
+                <a href="Images/Example Resume.pdf"_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white"> resume</a>
+            </div>
+        </div>
+        <div class="footer__copyright"> copyright © 2022 Abdullahi Seed
+        </div>
+    </footer>
 </body>
 </html>
