--- a/IndexF.html
+++ b/IndexF.html
@@ -18,14 +18,16 @@
                 <li>
                     <a href="" class="
                  nav__link--anchor
-                 link__hove-effect
-                 link__hove-effect--block"> Languages</a>
+                 link__hover-effect
+                 link__hover-effect--block
+                 link__hover-effect--black"> Languages</a>
                 </li>
                 <li>
                     <a href="" class="
                 nav__link--anchor
-                link__hove-effect
-                link__hove-effect--block"> Projects</a>
+                link__hover-effect
+                link__hover-effect--block
+                link__hover-effect--black"> Projects</a>
                 </li>
                 <li>
                     <a href="" class="
@@ -219,10 +221,14 @@
     </section>
     <footer>
         <div class="row footer__row">
-            <a href="#">
+            <a href="#" class="footer__anchor">
                 <figure>
                     <img src="/Images/logo.svg" class="footer-logo--img" alt="">
                 </figure>
+                <span class="footer__logo--popper">
+                    top 
+                    <i class="fas fa-arrow-up"></i>
+                </span>
             </a>
             <div class="footer__social--list">
                 <a href="https://google.com" target="_blank" class="
