--- a/IndexF.html
+++ b/IndexF.html
@@ -15,21 +15,21 @@
         <nav>
             <div class="personal__logo"> Abdullahi Ahmed </div>
             <ul class="nav__link--list">
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                  nav__link--anchor
                  link__hover-effect
                  link__hover-effect--block
                  link__hover-effect--black"> Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--block
                 link__hover-effect--black"> Projects</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
             nav__link--anchor
             nav__link--anchor-primary"> Contact </a>
@@ -149,7 +149,7 @@
                             <div class="project__description">
                                 <h3 class="project__description--title"> car sales </h3>
                                 <h4 class="project__description--sub-title"> Html, CSS, JavaScript, Vue, Vuex </h4>
-                                <p class="project__description--para">
+                                <p class="Project__description--para">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed diam leo,
                                     scelerique sed odio get, luctus faucibus augue. Fusce volupat laculis dapibus. Lorem
                                     ipsum dolor sit amet,
